--- a/application-1-frontend/web/index.html
+++ b/application-1-frontend/web/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="finku_clone_slicing">
+  <meta name="apple-mobile-web-app-title" content="MoneyMinder">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>finku_clone_slicing</title>
+  <title>MoneyMinder</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
